# lib-avstack-carla

./: .gitignore  Makefile  postprocess_carla_objects.py  pyproject.toml
avcarla/: __init__.py  _manager.py  actor.py  bootstrap.py  client.py  config.py  display.py  geometry.py  models.py  recorder.py  sensors.py  utils.py
