[tool.poetry]
name = "lib-avstack-carla"
version = "0.1.0-alpha.1"
description = "Wrapper around Carla simulator for AVstack"
authors = ["Spencer Hallyburton <spencer.hallyburton@duke.edu>"]
readme = "README.md"
license = "MIT"
homepage = "https://avstack.org"
repository = "https://github.com/avstack-lab/lib-avstack-carla"
keywords = ["self-driving", "autonomy", "perception", "planning", "control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]
packages = [{include = "avcarla"}]

[tool.poetry.dependencies]
python = "~3.10"
numpy = ">=1.20, <1.26"
numpy-quaternion = "^2022.4"

[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-cov = "^4"
bandit = "^1.7"
black = "~22.12.0"
mypy = "^0"
isort = "^5.11"
flake8 = "^5.0"
autoflake = "^1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s"
testpaths = [
    "tests",
    "integration",
]

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
